# cchess

./: .notes.md  CMakeLists.txt  README.md  main.c  todo.md
engine/: CMakeLists.txt  converter.c  converter.h  engine.c  engine.h  fen.c  fen.h  figures.c  figures.h  moves.c  moves.h  pgn.c  pgn.h  pgnConvertor.c  slidingMove.c  slidingMove.h  types.c  types.h
engine/moves/: CMakeLists.txt  attacks.c  attacks.h  moves.c  moves.h  movesPossible.c  slidingMove.c  slidingMove.h  unsafeMoves.c  unsafeMoves.h
